--- a/.github/workflows/github-readme-stats.yml
+++ b/.github/workflows/github-readme-stats.yml
@@ -3,15 +3,16 @@ name: Generate GitHub Stats
 on:
   schedule:
     - cron: '0 0 * * *'  # Mỗi ngày lúc 00:00 UTC
-  workflow_dispatch:     # Chạy thủ công
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # <-- Quan trọng: Cho phép GITHUB_TOKEN push/commit
+
     steps:
       - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PAT_TOKEN }}  # Quan trọng: Thêm PAT để push commit (xem bước dưới)
 
       - name: Generate Stats Card
         uses: readme-tools/github-readme-stats-action@v1
@@ -26,6 +27,8 @@ jobs:
             show_icons=true
             hide_rank=false
             theme=noctis_minimus
+          path: .github/stats/stats.svg  # <-- Chỉ định path để lưu file
+          token: ${{ secrets.GITHUB_TOKEN }}  # <-- Thêm token ở đây
 
       - name: Generate Top Languages Card
         uses: readme-tools/github-readme-stats-action@v1
@@ -35,11 +38,13 @@ jobs:
             username=${{ github.repository_owner }}
             layout=compact
             theme=noctis_minimus
+          path: .github/stats/top-langs.svg
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "chore: update github readme stats" || echo "No changes to commit"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add .github/stats/*.svg || true
+          git commit -m "chore: update github readme stats cards" || echo "No changes to commit"
           git push
